--- a/index.html
+++ b/index.html
@@ -2,31 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My first styled page</title>
-    <link rel="stylesheet"href="mystyle.css">
+    <title>Taco's game</title>
+    <link rel = 'stylesheet' href ='style.css'>
   </head>
   <body>
-    <!-- 网站导航菜单 -->
-    <ul class="navbar">
-      <li><a href="index.html">Home page</a></li>
-      <li><a href="musings.html">Musings</a></li>
-      <li><a href="town.html">My town</a></li>
-      <li><a href="links.html">Links</a></li>
-    </ul>
-    <!-- Main content -->
-      <h1>My first styled page</h1>
-
-      <p>Welcome to my styled page!
-
-      <p>It lacks images, but at least it has style.
-        And it has links, even if they don't go
-        anywhere&hellip;
-
-      <p>There should be more here, but I don't know
-        what yet.
-
-      <!-- Sign and date the page, it's only polite! -->
-      <address>Made 5 April 2004<br>
-        by myself.</address>
+    <h1>Color sensitivity test.</h1>
+    <div id = "container">
+    </div>
+    <div id = 'content'>
+      <p>round:<span id = 'round'>1</span></p>
+      <p>score:<span id = 'score'>0</span></p>
+    </div>
+    <p id = 'message'></p>
+    <div id = 'button'>
+      <button onclick='sayHello()'>Game Description</button>
+      <button id = 'restart' style = 'display: none'>One more time</button>
+    </div>
+    <script src='script1.js'></script>
   </body>
 </html>
